crates/turborepo-integration-tests/tests/snapshots/run_one_script_error__error_not_cached.snap
---
source: crates/turborepo-integration-tests/tests/run_one_script_error.rs
expression: redact_error_output(&result.combined_output())
---
• Packages in scope: my-app
• Running error in 1 packages
• Remote caching disabled
my-app:okay: cache hit, replaying logs [HASH]
my-app:okay: 
my-app:okay: > okay
my-app:okay: > echo working
my-app:okay: 
my-app:okay: working
my-app:error: cache miss, executing [HASH]
my-app:error: 
my-app:error: > error
my-app:error: > exit 2
my-app:error: 
my-app:error: npm error Lifecycle script `error` failed with error:
my-app:error: npm error code 2
my-app:error: npm error path [TEMP_DIR]
my-app:error: npm error workspace my-app
my-app:error: npm error location [TEMP_DIR]
my-app:error: npm error command failed
my-app:error: npm error command [SHELL] exit 2

 Tasks:    1 successful, 2 total
Cached:    1 cached, 2 total
  Time: [TIME] 
Failed:    my-app#error

my-app:error: ERROR: command finished with error: [PATH]) [NPM] run error exited (2)
my-app#error: [PATH]) [NPM] run error exited (2)
 ERROR  run failed: command  exited (2)
